--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,9 +38,9 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           ./mvnw clean verify sonar:sonar \
-          -Dsonar.projectKey=VOTRE_PROJECT_KEY_ICI \
-          -Dsonar.organization=VOTRE_ORG_KEY_ICI \
-          -Dsonar.host.url=[https://sonarcloud.io](https://sonarcloud.io)
+          "-Dsonar.projectKey=redaelfer_talentai" \
+          "-Dsonar.organization=redaelfer" \
+          -Dsonar.host.url=https://sonarcloud.io
 
   frontend-test-build:
     runs-on: ubuntu-latest
