--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,9 +79,51 @@ services:
     networks:
       - talentai-network
 
+  jenkins:
+    image: jenkins/jenkins:lts
+    container_name: jenkins-tp
+    privileged: true
+    user: root
+    ports:
+      - "8082:8080"
+      - "50000:50000"
+    volumes:
+      - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock 
+    networks:
+      - talentai-network
+
+  sonarqube:
+    image: sonarqube:lts
+    container_name: sonarqube-tp
+    ports:
+      - "9000:9000"
+    environment:
+      - SONAR_JDBC_URL=jdbc:postgresql://db-sonar:5432/sonar
+      - SONAR_JDBC_USERNAME=sonar
+      - SONAR_JDBC_PASSWORD=sonar
+    depends_on:
+      - db-sonar
+    networks:
+      - talentai-network
+
+  db-sonar:
+    image: postgres:16
+    container_name: postgres-sonar
+    environment:
+      - POSTGRES_USER=sonar
+      - POSTGRES_PASSWORD=sonar
+      - POSTGRES_DB=sonar
+    volumes:
+      - postgres_sonar_data:/var/lib/postgresql/data
+    networks:
+      - talentai-network
+
 volumes:
   postgres_data:
   ollama_data:
+  jenkins_home:
+  postgres_sonar_data:
 
 networks:
   talentai-network:
